Update go version and change API design
