# swagger/swagger.yaml
@@ -56,7 +56,7 @@ definitions:
       id: Possimus vel.
       name: f0iuv3mp0p
       owner: In rerum.
-      registeredAt: 2.7170617494452116e+18
+      registeredAt: 2717061749445211706
     properties:
       description:
         description: Description of the app
@@ -82,7 +82,7 @@ definitions:
         type: string
       registeredAt:
         description: Time when app is registered
-        example: 2.7170617494452116e+18
+        example: 2717061749445211706
         format: int64
         type: integer
     required:
@@ -101,7 +101,7 @@ definitions:
       detail: Value of ID must be an integer
       id: 3F1FKVRR
       meta:
-        timestamp: 1.458609066e+09
+        timestamp: 1458609066
       status: "400"
     properties:
       code:
@@ -122,7 +122,7 @@ definitions:
         description: a meta object containing non-standard meta-information about
           the error.
         example:
-          timestamp: 1.458609066e+09
+          timestamp: 1458609066
         type: object
       status:
         description: the HTTP status code applicable to this problem, expressed as
@@ -156,7 +156,7 @@ info:
   title: The apps management microservice
   version: "1.0"
 paths:
-  /apps:
+  /:
     post:
       description: Register new app
       operationId: apps#registerApp
@@ -188,7 +188,7 @@ paths:
       summary: registerApp apps
       tags:
       - apps
-  /apps/{appId}:
+  /{appId}:
     delete:
       description: Delete an app
       operationId: apps#deleteApp
@@ -293,7 +293,7 @@ paths:
       summary: updateApp apps
       tags:
       - apps
-  /apps/{appId}/regenerate-secret:
+  /{appId}/regenerate-secret:
     put:
       description: Regenerate client secret
       operationId: apps#regenerateClientSecret
@@ -325,7 +325,7 @@ paths:
       summary: regenerateClientSecret apps
       tags:
       - apps
-  /apps/my:
+  /my:
     get:
       description: Get all user's apps
       operationId: apps#getMyApps
@@ -346,67 +346,6 @@ paths:
       schemes:
       - http
       summary: getMyApps apps
-      tags:
-      - apps
-  /apps/users/{userId}/all:
-    get:
-      description: Get app by id
-      operationId: apps#getUserApps
-      parameters:
-      - description: User ID
-        in: path
-        name: userId
-        required: true
-        type: string
-      produces:
-      - application/vnd.goa.error
-      - text/plain
-      responses:
-        "200":
-          description: OK
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: getUserApps apps
-      tags:
-      - apps
-  /apps/verify:
-    post:
-      description: Verify an application by its ID and secret
-      operationId: apps#verifyApp
-      parameters:
-      - description: App ID+secret credentials
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/AppCredentialsPayload'
-      produces:
-      - application/vnd.goa.apps+json
-      - application/vnd.goa.error
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/apps'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: verifyApp apps
       tags:
       - apps
   /swagger-ui/{filepath}:
@@ -441,6 +380,67 @@ paths:
       schemes:
       - http
       summary: Download swagger/swagger.json
+  /users/{userId}/all:
+    get:
+      description: Get app by id
+      operationId: apps#getUserApps
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/vnd.goa.error
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: getUserApps apps
+      tags:
+      - apps
+  /verify:
+    post:
+      description: Verify an application by its ID and secret
+      operationId: apps#verifyApp
+      parameters:
+      - description: App ID+secret credentials
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/AppCredentialsPayload'
+      produces:
+      - application/vnd.goa.apps+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apps'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: verifyApp apps
+      tags:
+      - apps
 produces:
 - application/json
 - application/xml
